# JsonAPI

./: .gitignore  BUCK  CHANGES.md  CMakeLists.txt  README.md  doxyfile
include/: CMakeLists.txt
include/json/: Json.hpp  JsonDocument.hpp  macros.hpp
jansson/: BUCK  CMakeLists.txt  jansson.cmake  jansson_api.c  jansson_api.h  jansson_private_config.h
jansson/include/jansson/: jansson_api.h
src/: Json.cpp  JsonDocument.cpp
tests/: CMakeLists.txt  sl_settings.json
tests/src/: UnitTest.hpp  main.cpp
tmp/: test.json
